implemented ac and mr container

--- a/nosterra.html
+++ b/nosterra.html
@@ -1652,9 +1652,11 @@ $$ |  $$ |$$$$$$\ $$$$$$$  |$$$$$$$  |$$$$$$$$\ $$ | \$$ |      $$ |      $$$$$$
               <div class="header" style="height: auto;">
                 <span style="width: 25px;"><img src="https://raw.githubusercontent.com/mmarder96/nosterra-character-sheet/master/images/equipped.png" style="width: 15px; margin-bottom: -3px; vertical-align: inherit;"
                     alt="equipped symbol"></span>
-                <span style="width: 175px; text-align: left;" data-i18n="armor-name-u">ARMOR NAME</SPAN>
-                <span style="width: 25px;"><img src="https://raw.githubusercontent.com/mmarder96/wild-wasteland-char-sheet/beta/images/dt.png" style="width: 15px; margin-bottom: -3px;  vertical-align: inherit;"
+                <span style="width: 150px; text-align: left;" data-i18n="armor-name-u">ARMOR NAME</SPAN>
+                <span style="width: 25px;"><img src="https://raw.githubusercontent.com/mmarder96/nosterra-character-sheet/master/images/ac.png" style="width: 15px; margin-bottom: -3px;  vertical-align: inherit;"
                     alt="AC symbol"></span>
+                <span style="width: 25px;"><img src="https://raw.githubusercontent.com/mmarder96/nosterra-character-sheet/master/images/mr.png" style="width: 15px; margin-bottom: -3px;  vertical-align: inherit;"
+                    alt="MR symbol"></span>
               </div>
               <input type="hidden" name="attr_equippedclothingid">
               <input type="hidden" name="attr_equippedarmorid">
