--- a/nosterra.html
+++ b/nosterra.html
@@ -757,7 +757,7 @@ $$ |  $$ |$$$$$$\ $$$$$$$  |$$$$$$$  |$$$$$$$$\ $$ | \$$ |      $$ |      $$$$$$
     <div class="page core">
       <div class="header">
         <div class="name-container">
-          <img src="https://raw.githubusercontent.com/mmarder96/nosterra-character-sheet/master/images/chronicles_of_nosterra_logo2.png" style="padding-bottom: 5px; width: 250px" alt="Chronicles of Nosterra Logo">
+          <img src="https://raw.githubusercontent.com/mmarder96/nosterra-character-sheet/master/images/chronicles_of_nosterra_logo2.png" style="padding-left: 20px; padding-bottom: 5px; width: 205px" alt="Chronicles of Nosterra Logo"> alt="Chronicles of Nosterra Logo">
           <input type="text" name="attr_character_name" style="width: 100%;">
           <span class="label" data-i18n="char-name-u">CHARACTER NAME</span>
         </div>
@@ -1880,7 +1880,7 @@ $$ |  $$ |$$$$$$\ $$$$$$$  |$$$$$$$  |$$$$$$$$\ $$ | \$$ |      $$ |      $$$$$$
     <div class="page bio">
       <div class="header">
         <div class="name-container">
-          <img src="https://raw.githubusercontent.com/mmarder96/nosterra-character-sheet/master/images/chronicles_of_nosterra_logo2.png" style="padding-bottom: 5px; width: 250px" alt="Chronicles of Nosterra Logo">
+  <img src="https://raw.githubusercontent.com/mmarder96/nosterra-character-sheet/master/images/chronicles_of_nosterra_logo2.png" style="padding-left: 20px; padding-bottom: 5px; width: 205px" alt="Chronicles of Nosterra Logo"> alt="Chronicles of Nosterra Logo">
           <input type="text" name="attr_character_name" style="width: 100%;">
           <span class="label" data-i18n="char-name-u">CHARACTER NAME</span>
         </div>
@@ -1959,7 +1959,7 @@ $$ |  $$ |$$$$$$\ $$$$$$$  |$$$$$$$  |$$$$$$$$\ $$ | \$$ |      $$ |      $$$$$$
     <div class="page options">
       <div class="header">
         <div class="name-container">
-          <img src="https://raw.githubusercontent.com/mmarder96/nosterra-character-sheet/master/images/chronicles_of_nosterra_logo2.png" style="padding-bottom: 5px; width: 250px" alt="Chronicles of Nosterra Logo">
+  <img src="https://raw.githubusercontent.com/mmarder96/nosterra-character-sheet/master/images/chronicles_of_nosterra_logo2.png" style="padding-left: 20px; padding-bottom: 5px; width: 205px" alt="Chronicles of Nosterra Logo"> alt="Chronicles of Nosterra Logo">
           <input type="text" name="attr_character_name" style="width: 100%;">
           <span class="label" data-i18n="char-name-u">CHARACTER NAME</span>
         </div>
