--- a/nosterra.html
+++ b/nosterra.html
@@ -1355,13 +1355,13 @@ $$ |  $$ |$$$$$$\ $$$$$$$  |$$$$$$$  |$$$$$$$$\ $$ | \$$ |      $$ |      $$$$$$
                     <input class="subfield" type="text" name="attr_dmgbase" placeholder="0" style="width: 20px; font-size: 11px">
                     <span style="width: 5px">+</span>
                     <select name="attr_dmgattr" style="width: 25px">
-                      <option value="@{strength_mod}" data-i18n="str-u">STR</option>
-                      <option value="@{dexterity_mod}" data-i18n="dex-u">DEX</option>
-                      <option value="@{constitution_mod}" data-i18n="con-u">CON</option>
-                      <option value="@{intelligence_mod}" data-i18n="int-u">INT</option>
-                      <option value="@{wisdom_mod}" data-i18n="wis-u">WIS</option>
-                      <option value="@{charisma_mod}" data-i18n="cha-u">CHA</option>
-                      <option value="@{willpower_mod}" data-i18n="wil-u">WIL</option>
+                      <option value="@{strength}" data-i18n="str-u">STR</option>
+                      <option value="@{dexterity}" data-i18n="dex-u">DEX</option>
+                      <option value="@{constitution}" data-i18n="con-u">CON</option>
+                      <option value="@{intelligence}" data-i18n="int-u">INT</option>
+                      <option value="@{wisdom}" data-i18n="wis-u">WIS</option>
+                      <option value="@{charisma}" data-i18n="cha-u">CHA</option>
+                      <option value="@{willpower}" data-i18n="wil-u">WIL</option>
                       <option value="0" selected="selected">—</option>
                     </select>
                     <input type="hidden" name="attr_dmgskill" value="0"/>
@@ -1521,13 +1521,13 @@ $$ |  $$ |$$$$$$\ $$$$$$$  |$$$$$$$  |$$$$$$$$\ $$ | \$$ |      $$ |      $$$$$$
                     <input class="subfield" type="text" name="attr_dmgbase" placeholder="0" style="width: 20px; font-size: 11px">
                     <span style="width: 5px">+</span>
                     <select name="attr_dmgattr" style="width: 25px">
-                      <option value="@{strength_mod}" data-i18n="str-u">STR</option>
-                      <option value="@{dexterity_mod}" data-i18n="dex-u">DEX</option>
-                      <option value="@{constitution_mod}" data-i18n="con-u">CON</option>
-                      <option value="@{intelligence_mod}" data-i18n="int-u">INT</option>
-                      <option value="@{wisdom_mod}" data-i18n="wis-u">WIS</option>
-                      <option value="@{charisma_mod}" data-i18n="cha-u">CHA</option>
-                      <option value="@{willpower_mod}" data-i18n="wil-u">WIL</option>
+                      <option value="@{strength}" data-i18n="str-u">STR</option>
+                      <option value="@{dexterity}" data-i18n="dex-u">DEX</option>
+                      <option value="@{constitution}" data-i18n="con-u">CON</option>
+                      <option value="@{intelligence}" data-i18n="int-u">INT</option>
+                      <option value="@{wisdom}" data-i18n="wis-u">WIS</option>
+                      <option value="@{charisma}" data-i18n="cha-u">CHA</option>
+                      <option value="@{willpower}" data-i18n="wil-u">WIL</option>
                       <option value="0" selected="selected">—</option>
                     </select>
                     <span style="width: 5px">+</span>
@@ -5376,7 +5376,7 @@ $$ |  $$ |$$\   $$ |      $$$  / \$$$ |$$ |  $$ |$$ |  $$ |$$ |\$$\  $$ |      $
     console.log("UPDATING ATTACK");
     getAttrs(["equippedweaponid"], function(attrs) {
       var weaponid = attrs["equippedweaponid"] ? attrs["equippedweaponid"] : "";
-      var attrs_to_get = ["level","d20","pb","pb_type","pbd_safe","dtype","globalmagicmod","strength_mod","dexterity_mod","constitution_mod","intelligence_mod","wisdom_mod","charisma_mod","willpower_mod","barter_bonus","energy_weapons_bonus","explosives_bonus","guns_bonus","lockpick_bonus","medicine_bonus","melee_weapons_bonus","repair_bonus","science_bonus","sneak_bonus","speech_bonus","survival_bonus","unarmed_bonus","global_damage_mod_roll","global_damage_mod_crit","critrange","critical_strike"];
+      var attrs_to_get = ["level","d20","pb","pb_type","pbd_safe","dtype","globalmagicmod","strength","dexterity","constitution","intelligence","wisdom","charisma","willpower","strength_mod","dexterity_mod","constitution_mod","intelligence_mod","wisdom_mod","charisma_mod","willpower_mod","barter_bonus","energy_weapons_bonus","explosives_bonus","guns_bonus","lockpick_bonus","medicine_bonus","melee_weapons_bonus","repair_bonus","science_bonus","sneak_bonus","speech_bonus","survival_bonus","unarmed_bonus","global_damage_mod_roll","global_damage_mod_crit","critrange","critical_strike"];
       _.each(attack_array, function(attackid) {
         attrs_to_get.push("repeating_attack_" + attackid + "_activeflag");
         attrs_to_get.push("repeating_attack_" + attackid + "_cooldown");
